# note-taker-plus

./: .gitignore  CLAUDE_STATUS.md  DEPLOYMENT.md  README.md  SETUP.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  card.py  review_log.py  source.py  tag.py
backend/app/routers/: __init__.py  cards.py  export.py  health.py  sources.py  sync.py  tags.py
backend/app/schemas/: __init__.py  card.py  source.py  tag.py
backend/app/services/: __init__.py  card_generator.py  obsidian_export.py  raindrop.py  spaced_repetition.py
extension/: generate_icons.py  manifest.json
extension/src/: background.js  content.css  content.js  popup.html  popup.js
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useStore.ts
frontend/src/pages/: CardsPage.tsx  QuizPage.tsx  ReviewPage.tsx  SettingsPage.tsx  SourcesPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
